...
//                model = it.value,
//                contentDescription = "Profile Image",
//            )
//        }
        TextField(
            value = state.fullName.given,
            label = { Text("Given Name") },
            singleLine = true,
            onValueChange = onGivenNameChange
        )
        TextField(
            value = state.fullName.middle,
            label = { Text("Middle Name") },
            singleLine = true,
            onValueChange = onMiddleNameChange
        )
        TextField(
            value = state.fullName.family,
            label = { Text("Family Name") },
            singleLine = true,
            onValueChange = onFamilyNameChange
        )

        val formatter = XyzTheme.dateFormatter
        Text(text = formatter.format(state.birthdate, "MMMM dd, yyyy"))
...
