...
        DisabilityPicker(
            state = DisabilityPickerState(state.disabilities.toList()),
            onUpdateSelected = onDisabilitiesSelected
        )
        TextField(
            value = state.preferences,
            label = { Text("Preferences") },
            singleLine = true,
            onValueChange = onPreferencesChange
        )

        Button(
            onClick = onSubmit,
            enabled = state.canSubmit
        ) {
            Text(text = "Submit")
        }
    }
}

