...
                    onRemove = { onUpdateSelected(state.selected - it) }
                )
            }
        }
        var showDialog by remember { mutableStateOf(false) }
        Button(onClick = { showDialog = true }) {
            Text("Add Disability")
        }
        if (showDialog) {
            val options = listOf(
                Disability.Deaf, Disability.Blind,
                Disability.Mobility, Disability.Allergy,
                Disability.ServiceAnimal
...
    Dialog(
        onDismissRequest = onDismiss
    ) {
        Column(
            modifier = modifier
        ) {
            Text("Disability Picker")

            options.forEach {
                Button(onClick = { onSelectDisability(it) }) {
                    Text(it.toString())
                }
            }
...
