<?xml version="1.0" encoding="UTF-8" ?>
<!--
  ~ Copyright (c) 2024 Pointyware
  -->

<resources>
    <string name="loading_content_description">Loading</string>
</resources>
